--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
 #displayNumbers{
 	text-align: right;
 	padding-right: 3px;
-	margin-top: -3px;
+	margin-top: -0px;
 	color: black;
 }
 #display{
@@ -33,5 +33,10 @@
 
 button{
 	width: 23.2%;
+	height: 25px;
+	border: 1px solid black;
+	-moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
 }
 
